samples/_failures_safe/1761450235_c024b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_181da52e.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_181da52e.c:190:5: error: expected identifier or ‘(’ at end of input
  190 |     for (int
      |     ^~~
./samples/SAFE/__tmp_181da52e.c:190:5: error: expected declaration or statement at end of input
